# cmake-pybind11

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: aarch64_docker.yml  amd64_docker.yml  amd64_freebsd.yml  amd64_linux.yml  amd64_macos.yml  amd64_windows.yml  amd64_windows_cmake.yml  arm64_docker_cmake.yml  arm64_macos.yml
Bar/python/: CMakeLists.txt  pyBar.cpp
Foo/python/: CMakeLists.txt  pyFoo.cpp
FooBar/include/foobar/: FooBar.hpp
FooBar/python/: CMakeLists.txt  pyFooBar.cpp
FooBar/src/: FooBar.cpp
ci/: Makefile  README.md
ci/docker/almalinux/: Dockerfile
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/centos/: Dockerfile
ci/docker/debian/: Dockerfile
ci/docker/fedora/: Dockerfile
ci/docker/manylinux/: Dockerfile  build-manylinux.sh
ci/docker/opensuse/: Dockerfile
ci/docker/rockylinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
ci/samples/: sample.py
ci/vagrant/freebsd/: Vagrantfile
ci/vagrant/netbsd/: Vagrantfile
ci/vagrant/openbsd/: Vagrantfile
cmake/: check_deps.cmake  cpp.cmake  python.cmake  system_deps.cmake
cmake/dependencies/: CMakeLists.txt  CMakeLists.txt.swig
docs/: legend.dot  pipeline.dot
examples/: CMakeLists.txt  example.py
python/: __init__.py.in  setup.py.in
tests/: bar.py  foo.py  foobar.py
